# Demos

./: .gitignore  Electorn VS Tauri.drawio  README.md  quickjs_gc.drawio  readme.txt  test.tex  未命名绘图.drawio
AndroidDemo/: build.gradle
AndroidDemo/app/: build.gradle
AndroidDemo/gradle/wrapper/: gradle-wrapper.properties
AndroidOpenGlTest/: settings.gradle
AndroidOpenGlTest/app/: build.gradle
ComposeTest/: settings.gradle.kts
ComposeTest/app/: build.gradle.kts
ComposeX/: settings.gradle.kts
ComposeX/composeApp/: build.gradle.kts
Flow/: build.gradle.kts  settings.gradle.kts
JavaVirtualThread/src/: Main.java
KMMTest/androidApp/: build.gradle.kts
KMMTest/iosApp/iosApp/: KMMBridge.h  (+3 more)
KMMTest/shared/: build.gradle.kts  shared.podspec
KuiklyDemo/androidApp/: build.gradle.kts
KuiklyDemo/gradle/: libs.versions.toml
KuiklyDemo/shared/: build.gradle.kts
LearnOC/LearnOC/: ClassInspector.h  ClassInspector.m  ClassProtocol.h  ClassProtocol.m  DeallocOrder.h  DeallocOrder.m  DeallocOrderTest.h  DeallocOrderTest.m  KVOTest.h  KVOTest.m  MethodSwizzling.h  MethodSwizzling.m  PropertyTest.h  PropertyTest.m  SimpleTest1.h  SimpleTest1.m  main.m
LearnOC/LearnOC.xcodeproj/: project.pbxproj
OpenGL/: CMakeLists.txt  color.cpp  index.h  main.cpp  matrix.cpp
OpenGL/glfw/: AxisRender.h  AxisRenderer.cpp  CMakeLists.txt  Leson2Shader.cpp  LesonShader.cpp  Lesson1.1_Rectangle.cpp  Lesson1_Triangle.cpp  Lesson2_Shader.cpp  Lesson3_Texture.cpp  Lesson4_Transformations.cpp  Lesson5_CoordinateSystem.cpp  MessageQueue.cpp  MessageQueue.h  MyTriangleRender.cpp  TriangleRenderer.cpp  glfw_main.cpp  glhelper.cpp  glhelper.h  index.h  lesson3Texture.cpp  lesson3_Texture.cpp  readme.md  test.cpp  utils.h
OpenGL/glut/: CMakeLists.txt  basic.cpp  index.h  main.cpp  polygon.cpp
cpp_modules/: readme.md
electron-quick-start/: CMakeLists.txt  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js
haskell/: Functions.hs  JavaDemo.java  Makefile
kmm-project-structure/iOS/: Podfile
kmm-project-structure/kmm/: settings.gradle.kts
latex/: test.tex
rustlings/: .rustlings-state.txt  README.md
tauri-test-js/: package-lock.json  package.json
tauri-test-js/src-tauri/: Cargo.toml
tauri-test-npm/: package-lock.json  package.json
tauri-test-npm/src/: App.jsx
tauri-test-npm/src-tauri/: Cargo.toml  tauri.conf.json
tauri-test-rust/src/: main.js
tauri-test-rust/src-tauri/: Cargo.toml  tauri.conf.json
(+159 files in other folders)
